--- a/recipe.css
+++ b/recipe.css
@@ -1,6 +1,6 @@
 body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  background-image: url("assets/silverware.jpg");
+  background-image: url("images/silverware.jpg");
   background-attachment: fixed;
 }
 
@@ -53,7 +53,7 @@ h1 {
 }
 
 .ing-container li {
-  list-style-image: url("assets/pie_icon.gif");
+  list-style-image: url("images/pie_icon.gif");
 }
 
 .line-it {
